# hyperstudy-bridge

./: .gitignore  .prettierrc  API_DOCUMENTATION.md  CERTIFICATE_CONVERSION.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT_PLAN.md  GITHUB_SECRETS_SETUP.md  GITHUB_SECRETS_VALUES.md  LICENSE  LSL_INTEGRATION_PLAN.md  MACOS_SIGNING_SETUP.md  PHASE6_COMPLETION_SUMMARY.md  PROGRESS_UPDATE.md  PUPIL_IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.7.0-beta.3.md  TESTING.md  TESTING_INSTRUCTIONS.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  test-connect.js  test-websocket.js  test_ttl_detection.sh  tsconfig.json  vite.config.js  vitest.config.js  vitest.config.mjs  vitest.simple.config.js
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: build-frenz-bridge.yml  ci-performance.yml  ci-performance.yml.disabled  ci.yml  create-release.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml  sync-docs-release-notes.yml  test-macos-build.yml  update-readme.yml
e2e/: global-setup.js  global-teardown.js
e2e/helpers/: mock-server.js
e2e/specs/: device-management.spec.js  multi-device-sync.spec.js  settings-persistence.spec.js
python/frenz-bridge/: build-pyapp.sh  frenz_lsl_bridge.py  pyproject.toml
scripts/: build-and-sign-mac.sh  create-release.sh  generate-changelog.sh  load-test.js  notarize.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  LSL_TEST_DOCUMENTATION.md  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: lsl_benchmarks.rs  performance.rs  stress_test.rs
src-tauri/capabilities/: default.json
src-tauri/docs/: TTL_PROTOCOL.md
src-tauri/examples/: list_ttl_devices.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: frenz-bridge.placeholder
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  performance.rs  usb_monitor.rs
src-tauri/src/bridge/: message.rs  mod.rs  state.rs  websocket.rs
src-tauri/src/devices/: biopac.rs  kernel.rs  kernel_tests.rs  mock.rs  mod.rs  pupil.rs  pupil_example.rs  ttl.rs  ttl_tests.rs
src-tauri/src/devices/lsl/: README.md  frenz.rs  frenz_process.rs  inlet.rs  mod.rs  neon.rs  outlet.rs  resolver.rs  sync.rs  test_utils.rs  tests.rs  types.rs
src-tauri/src/storage/: logs.rs  mod.rs  schema.rs  timeseries.rs
src-tauri/tests/: README.md  bridge_test.rs  device_sync_test.rs  integration_test.rs  lsl_integration.rs
src-tauri/tests/common/: assertions.rs  concurrent.rs  harness.rs  mock_device.rs  mod.rs  websocket.rs
src/lib/: bridge.test.js
src/lib/components/: AddDeviceModal.svelte  DeviceCard.svelte  DeviceConfigModal.svelte  LogViewer.svelte  LslConfigPanel.svelte  PerformancePanel.svelte  SettingsPanel.svelte  StatusIndicator.svelte  VirtualLogList.svelte
src/lib/components/tests/: AddDeviceModal.test.js  DeviceCard.test.js  DeviceConfigModal.test.js
src/lib/services/: stronghold.js  tauri.js  websocket.js
src/lib/stores/: logs.svelte.js  websocket.svelte.js
src/lib/stores/tests/: logs.test.js  websocket.test.js
src/lib/types/: lsl.ts
src/test/: integration.test.js  performance-dashboard.html  setup.js
