[package]
name = "hyperstudy-bridge"
version = "0.1.0"
description = "HyperStudy Bridge - Hardware Device Integration"
authors = ["HyperStudy Team"]
edition = "2021"

[lib]
name = "hyperstudy_bridge"
path = "src/lib.rs"

[[bin]]
name = "hyperstudy-bridge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Device Communication
serialport = "4.5"
tokio-tungstenite = "0.24"
tungstenite = "0.24"

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Performance Monitoring
metrics = "0.24"
metrics-exporter-prometheus = "0.13"
sysinfo = "0.30"
histogram = "0.8"

# State Management
parking_lot = "0.12"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

# Testing utilities
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
