[project]
name = "frenz-lsl-bridge"
version = "0.1.0"
description = "Bridge between Earable FRENZ brainband (via frenztoolkit) and Lab Streaming Layer"
requires-python = ">=3.10"
dependencies = ["frenztoolkit>=0.3.2", "pylsl>=1.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
